# madokami-source-for-aidoku

./: README.md  index.json  index.min.json
.github/workflows/: build.yaml
sources/: en.madokami-v1.aix  multi.cubari-v1.aix
src/rust/en.madokami/: Cargo.toml
src/rust/en.madokami/res/: settings.json  source.json
src/rust/en.madokami/src/: exclusions.txt  helper.rs  lib.rs
src/rust/multi.cubari/: Cargo.toml  build.ps1
src/rust/multi.cubari/crates/cubari/: Cargo.toml
src/rust/multi.cubari/crates/cubari/src/: database.rs  helper.rs  lib.rs  remotestorage.rs
src/rust/multi.cubari/crates/cubari_url_parser/: Cargo.toml
src/rust/multi.cubari/crates/cubari_url_parser/src/: lib.rs
src/rust/multi.cubari/res/: settings.json  source.json
