[package]
name = "madokami-aidoku"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"
opt-level = "s"
strip = true
lto = true

[dependencies]
aidoku = { git = "https://github.com/Aidoku/aidoku-rs", default-features = false, features = ["dlmalloc"] }
base64 = { version = "0.21.0", default-features = false, features = ["alloc"] }
html-escape = "0.2.13"